--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.80.4",
     "typescript": "^4.6.0",
     "web-vitals": "^2.1.0"
   },
@@ -41,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "postcss": "^8.4.47",
+    "postcss-loader": "^8.1.1"
   }
 }
