--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
     "sass": "^1.80.4",
     "typescript": "^4.6.0",
     "web-vitals": "^2.1.0"
