--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
     "axios": "^1.7.7",
+    "firebase": "^11.0.1",
+    "firestore": "^1.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
